syntax = "proto3";
package eth;

import "google/protobuf/empty.proto";

service eth {
  /// Returns eth_accounts list.
  rpc EthAccounts(google.protobuf.Empty) returns (EthAccountsResponse);

  /// Call contract, returning the output data. Does not create a transaction.
  rpc EthCall(EthCallRequest) returns (EthCallResponse);

  /// Returns the balance for the given address.
  rpc EthGetBalance(EthGetBalanceRequest) returns (EthGetBalanceResponse);

  rpc EthGetBlockByHash(EthGetBlockByHashRequest) returns (EthBlockInfo);

  /// Returns the balance for the given address.
  rpc EthSendTransaction(EthSendTransactionRequest) returns (EthSendTransactionResponse);

  rpc EthChainId(google.protobuf.Empty) returns (EthChainIdResponse);

  rpc NetVersion(google.protobuf.Empty) returns (EthChainIdResponse);

  rpc EthBlockNumber(google.protobuf.Empty) returns (EthBlockNumberResponse);

  rpc EthGetBlockByNumber(EthGetBlockByNumberRequest) returns (EthBlockInfo);

  /// Returns the information about a transaction from a transaction hash.
  rpc EthGetTransactionByHash(EthGetTransactionByHashRequest) returns (EthTransactionInfo);

  /// Returns information about a transaction given a blockhash and transaction index position.
  rpc EthGetTransactionByBlockHashAndIndex(EthGetTransactionByBlockHashAndIndexRequest) returns (EthTransactionInfo);

  /// Returns information about a transaction given a block number and transaction index position.
  rpc EthGetTransactionByBlockNumberAndIndex(EthGetTransactionByBlockNumberAndIndexRequest) returns (EthTransactionInfo);

  rpc EthMining(google.protobuf.Empty) returns (EthMiningResponse);

  rpc EthGetBlockTransactionCountByHash(EthGetBlockTransactionCountByHashRequest) returns (EthGetBlockTransactionCountByHashResponse);

  rpc EthGetBlockTransactionCountByNumber(EthGetBlockTransactionCountByNumberRequest) returns (EthGetBlockTransactionCountByNumberResponse);

  rpc EthGetCode(EthGetCodeRequest) returns (EthGetCodeResponse);

  rpc EthGetStorageAt(EthGetStorageAtRequest) returns (EthGetStorageAtResponse);

  rpc EthSendRawTransaction(EthSendRawTransactionRequest) returns (EthSendRawTransactionResponse);
}

message EthAccountsResponse {
    repeated string accounts = 1; // Accounts
}

message EthTransactionInfo {
    optional string from = 1; // The address from which the transaction is sent
    optional string to = 2; // The address to which the transaction is addressed
    optional uint64 gas = 3; // The integer of gas provided for the transaction execution
    optional string price = 4; // The integer of gas price used for each paid gas encoded as hexadecimal
    optional string value = 5; // The integer of value sent with this transaction encoded as hexadecimal
    optional string data = 6; // The hash of the method signature and encoded parameters.
    optional string nonce = 7; // The integer of a nonce. This allows to overwrite your own pending transactions that use the same nonce.
}

message EthChainIdResponse {
    string id = 1;
}

message EthBlockInfo {
    string block_number = 1; // The block number. null when its pending block.
    string hash = 2; // Hash of the block. null when its pending block.
    string parent_hash = 3; // Hash of the parent block.
    string nonce = 4; // Hash of the generated proof-of-work. null when its pending block.
    string sha3_uncles = 5; // SHA3 of the uncles data in the block.
    string logs_bloom = 6; // The bloom filter for the logs of the block. null when its pending block.
    string transactions_root = 7; // The root of the transaction trie of the block.
    string state_root = 8; // The root of the final state trie of the block.
    string receipt_root = 9; // The root of the receipts trie of the block.
    string miner = 10; // The address of the beneficiary to whom the mining rewards were given.
    string difficulty = 11; // Integer of the difficulty for this block.
    string total_difficulty = 12; // Integer of the total difficulty of the chain until this block.
    string extra_data = 13; // The "extra data" field of this block.
    string size = 14; // Integer the size of this block in bytes.
    string gas_limit = 15; // The maximum gas allowed in this block.
    string gas_used = 16; // The total used gas by all transactions in this block.
    string timestamps = 17; // The unix timestamp for when the block was collated.
    repeated string transactions = 18; // Array of transaction objects, or 32 Bytes transaction hashes depending on the last given parameter.
    repeated string uncles = 19; // Array of uncle hashes.
}

message EthTransactionReceipt {
    string transaction_hash = 1; // Hash of the transaction.
    string transaction_index = 2; // Integer of the transactions index position in the block.
    string block_hash = 3; // Hash of the block where this transaction was in.
    string block_number = 4; // Block number where this transaction was in.
    string from = 5; // Address of the sender.
    string to = 6; // Address of the receiver. null when its a contract creation transaction.
    string cumulative_gas_used = 7; // The total amount of gas used when this transaction was executed in the block.
    string effective_gas_price = 8; // The sum of the base fee and tip paid per unit of gas.
    string gas_used = 9; // The amount of gas used by this specific transaction alone.
    string contract_address = 10; // The contract address created, if the transaction was a contract creation, otherwise null.
    repeated string logs = 11; // Array of log objects, which this transaction generated.
    string logs_bloom = 12; // Bloom filter for light clients to quickly retrieve related logs.
    string type = 13; // Integer of the transaction type, 0x00 for legacy transactions, 0x01 for access list types, 0x02 for dynamic fees. It also returns either :
    optional string root = 14; // 32 bytes of post-transaction stateroot (pre Byzantium)
    optional string status = 15; // Either 1 (success) or 0 (failure)
}

message EthCallRequest {
    EthTransactionInfo transaction_info = 1; // Transaction info
    string block_number = 2; // Block number in hexadecimal format or the string latest, earliest, pending, safe or finalized
}

message EthCallResponse {
    string data = 1; // The return value of the executed contract method
}

message EthSignRequest {
    string address = 1;
    string message = 2;
}

message EthSignResponse {
    string signature = 1;
}

message EthGetBalanceRequest {
    string address = 1;
    string block_number = 2;
}

message EthGetBalanceResponse {
    string balance = 1;
}

message EthSendTransactionRequest {
    EthTransactionInfo transaction_info = 1;
}

message EthSendTransactionResponse {
    string hash = 1;
}

message EthCoinBaseResponse {
    string address = 1;
}

message EthMiningResponse  {
    bool isMining = 1;
}

message EthHashRateResponse {
    string hash_rate = 1;
}

message EthGasPriceResponse {
    string gas_price = 1;
}

message EthBlockNumberResponse {
    string block_number = 1;
}

message EthGetTransactionCountRequest {
    string address = 1;
    string block_number = 2;
}

message EthGetTransactionCountResponse {
    string number_transaction = 1;
}

message EthGetBlockTransactionCountByHashRequest {
    string block_hash = 1;
}

message EthGetBlockTransactionCountByHashResponse {
    string number_transaction = 1;
}

message EthGetBlockTransactionCountByNumberRequest {
    string block_number = 1;
}

message EthGetBlockTransactionCountByNumberResponse {
    string number_transaction = 1;
}

message EthGetUncleCountByBlockHashRequest {
    string block_hash = 1;
}

message EthGetUncleCountByBlockHashResponse {
    string number_uncles = 1;
}

message EthGetUncleCountByBlockNumberRequest {
    string block_number = 1;
}

message EthGetUncleCountByBlockNumberResponse {
    string number_uncles = 1;
}

message EthGetCodeRequest {
    string address = 1;
    string block_number = 2;
}

message EthGetCodeResponse {
    string code = 1; // The code from the given address.
}

message EthSignTransactionRequest {
    EthTransactionInfo transaction_info = 1;
}

message EthSignTransactionResponse {
    string transaction = 1; // The signed transaction object.
}

message EthSendRawTransactionRequest {
    string transaction = 1;
}

message EthSendRawTransactionResponse {
    string hash = 1; // The transaction hash, or the zero hash if the transaction is not yet available.
}

message EthEstimateGasRequest {
    optional EthTransactionInfo transaction_info = 1; // Transaction info
    optional string block_number = 2; // Block number in hexadecimal format or the string latest, earliest, pending, safe or finalized
}

message EthEstimateGasResponse {
    string gas_used = 1;
}

message EthGetBlockByHashRequest {
    string hash = 1;
    bool full_transaction = 2;
}

message EthGetBlockByHashResponse {
    EthBlockInfo block_info = 1;
}

message EthGetBlockByNumberRequest {
    string number = 1;
    bool full_transaction = 2;
}

message EthGetBlockByNumberResponse {
    EthBlockInfo block_info = 1;
}

message EthGetTransactionByHashRequest {
    string hash = 1;
}

message EthGetTransactionByHashResponse {
    EthTransactionInfo transaction = 1;
}

message EthGetTransactionByBlockHashAndIndexRequest {
    string block_hash = 1;
    string index = 2;
}

message EthGetTransactionByBlockHashAndIndexResponse {
    EthTransactionInfo transaction = 1;
}

message EthGetTransactionByBlockNumberAndIndexRequest {
    string block_number = 1;
    string index = 2;
}

message EthGetTransactionByBlockNumberAndIndexResponse {
    EthTransactionInfo transaction = 1;
}

message EthGetUncleByBlockHashAndIndexRequest {
    string block_hash = 1;
    string index = 2;
}

message EthGetUncleByBlockHashAndIndexResponse {
    EthBlockInfo block_info = 1;
}

message EthGetUncleByBlockNumberAndIndexRequest {
    string block_number = 1;
    string index = 2;
}

message EthGetUncleByBlockNumberAndIndexResponse {
    EthBlockInfo block_info = 1;
}

message EthGetCompilersResponse {
    repeated string compilers = 1;
}

message EthCompileSolidityRequest {
    string code = 1;
}

message EthCompileSolidityResponse {
    string compiled_code = 1;
}

message EthCompileLLLRequest {
    string code = 1;
}

message EthCompileLLLResponse {
    string compiled_code = 1;
}

message EthCompileSerpentRequest {
    string code = 1;
}

message EthCompileSerpentResponse {
    string compiled_code = 1;
}

message EthProtocolVersionResponse {
    string protocol_version = 1;
}

message Web3Sha3Request {
    string data = 1; // The data to convert into a SHA3 hash
}

message Web3Sha3Response {
    string data = 1; // The SHA3 result of the given string.
}

message NetPeerCountResponse {
    string number_peer = 1;
}

message NetVersionResponse {
    string network_version = 1;
}

message Web3ClientVersionResponse {
    string client_version = 1;
}

message EthGetWorkResponse {
    string currentblock = 1; // Current block header pow-hash
    string seed_hash = 2; // The seed hash used for the DAG.
    string target = 3; // The boundary condition ("target"), 2^256 / difficulty.
}

message EthSubmitWorkRequest {
    string nounce = 1;
    string pow_hash = 2;
    string mix_digest = 3;
}

message EthSubmitWorkResponse {
    bool is_valid = 1;
}

message EthSubmitHashrateRequest {
    string hash_rate = 1;
    string id = 2;
}

message EthSubmitHashrateResponse {
    bool is_valid = 1;
}

message EthGetStorageAtRequest {
    string address = 1;
    string position = 2;
    string block_number = 3;
}

message EthGetStorageAtResponse {
    string value = 1; // The value at this storage position.
}

message EthGetTransactionReceiptRequest {
    string transaction_hash = 1;
}

message EthGetTransactionReceiptResponse {
    EthTransactionReceipt transaction_receipt = 1;
}

message EthSyncingInfo {
    string starting_block = 1; // The block at which the import started (will only be reset, after the sync reached his head)
    string current_block = 2; // The current block, same as eth_blockNumber
    string highest_block = 3; // The estimated highest block
}

message EthSyncingResponse {
    oneof status_or_info { 
        bool status = 1;
        EthSyncingInfo sync_info = 2;
    }
}
